--- a/scss/blocks/_media.scss
+++ b/scss/blocks/_media.scss
@@ -1,4 +1,21 @@
 @media screen and (min-width: 1200px){
+    ///product.html///
+    
+
+
+    /// index.html ///
+    .swiper-phone-next {
+        display: none;
+    }
+    .swiper-phone-prev {
+        display: none;
+    }
+    .swiper-team-next {
+        display: none;
+    }
+    .swiper-team-prev {
+        display: none;
+    }
     .header_logo-two {
         display: none;
     }
@@ -18,7 +35,47 @@
 }
 
 
-@media screen and (max-width: 1200px) {  
+@media screen and (max-width: 1200px) { 
+    ///product.html///
+    .__title h2 {
+        font-size: 56px;
+    }
+
+    .__item .__items {
+        max-width: 300px;
+    }
+
+    .__wrapper .__item {
+        margin-left: 15px;
+    }
+
+    .__wrapper .__item:last-child {
+        margin-left: 15px;
+    }
+
+    .product {
+        padding: 46px 19px 31px 31px;
+    }
+
+    .__item .__descr {
+        font-size: 12px;
+    }
+
+
+    /// index.html ///
+
+    .swiper-phone-next {
+        display: none;
+    }
+    .swiper-phone-prev {
+        display: none;
+    }
+    .swiper-team-next {
+        display: none;
+    }
+    .swiper-team-prev {
+        display: none;
+    }
     .about_img__phone {
         display: none;
     }
@@ -128,9 +185,13 @@
 
 
 .team_item__block {
-    max-width: 244px;
+    max-width: 240px;
     padding-right: 10px;
     padding-left: 23px;
+    margin-left: 10px;
+    img {
+        width: 100%;
+    }
 }
 
 .reviews_video_item {
@@ -156,6 +217,64 @@
 
 
 @media screen and (max-width: 998px) { 
+    ///product.html///
+    .__title h2 {
+        font-size: 45px;
+    }
+
+    .__border {
+        padding-right: 30px;
+    }
+
+    .promo_product .__item button {
+        padding: 13px 40px;
+    }
+
+    .__wrapper {
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .__wrapper .product__img {
+        width: 100%;
+        margin-bottom: 45px;
+    }
+
+    .__wrapper .product__img img{
+        display: block;
+        margin: 0 auto;
+    }
+
+    .__wrapper .__item {
+        margin-left: 0px;
+    }
+
+    .__items-price .__descr_two {
+        align-items: center;
+    }
+
+    .wrapper .__items {
+        padding-left: 40px;
+    }
+
+    .wrapper .__item img {
+        width: 100%;
+    }
+
+    .wrapper .__items p {
+        font-size: 16px;
+        padding-bottom: 30px;
+    }
+
+    .wrapper .__items h3 {
+        padding-bottom: 10px;
+    }
+
+    .help {
+        margin-right: 54px;
+    }
+
+    /// index.html ///
     .footer_items_ul {
         padding-left: 20px;
     }
@@ -499,6 +618,70 @@
 
 
  @media screen and (max-width: 768px) { 
+    ///product.html///
+    .promo_product .__item button {
+        padding: 13px 12px;
+        font-size: 14px;
+    }
+
+    .__title h2 {
+        font-size: 31px;
+    }
+
+    .__wrapper {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .__wrapper .__item:last-child {
+        margin-left: 0px;
+        margin-top: 60px;
+        margin-bottom: 55px;
+    }
+
+    .__next {
+        margin-top: 22px;
+    }
+
+    .__next a {
+        justify-content: center;
+    }
+
+    .__title .__item h2 {
+        font-size: 52px;
+    }
+
+    .wrapper {
+        flex-direction: column;
+    }
+
+    .wrapper .__items h3 {
+        margin-top: 40px;
+    }
+
+    .footer_img {
+        background: #15385F;
+    }
+
+    .footer__display {
+        align-items:center;
+        flex-direction: column;
+    }
+
+    .help {
+        margin-right: 0px;
+    }
+
+    .help p {
+        margin-top: 50px;
+        margin-left: 15%;
+    }
+
+    .right {
+        display: none;
+    }
+
+    /// index.html ///
     .reviews_next_a {
         margin-top: 25px;
     }
@@ -1178,6 +1361,43 @@
 }
 
 @media screen and (max-width: 576px) {  
+    ///product.html///
+    .nuber_call {
+        display: none;
+    }
+
+    .email_items {
+        font-size: 12px;
+    }
+
+    .phone_number {
+        font-size: 14px;
+    }
+
+    .promo_product {
+        flex-direction: column;
+        align-items: center;
+    }
+    .__border span {
+        display: none;
+    }
+
+    .promo_product .__item button {
+        max-width: 240px;
+    }
+
+    .__title a {
+        display: none;
+    }
+
+    .main_product {
+        padding-top: 0px;
+    }
+
+    .__item .__descr {
+        padding-top: 20px;
+    }
+    /// index.html ///
     .reviews_next_a {
         margin-top: 25px;
     }
@@ -1450,6 +1670,11 @@
 }
 
 @media screen and (max-width: 425px) { 
+    ///product.html///
+    
+
+
+    /// index.html ///
     .reviews_next_a {
         margin-top: 25px;
     }
@@ -1685,6 +1910,11 @@
 }
 
 @media screen and (max-width: 375px) {  
+    ///product.html///
+    
+
+
+    /// index.html ///
     .reviews_next_a {
         margin-top: 25px;
     }
