--- a/scss/blocks/_media.scss
+++ b/scss/blocks/_media.scss
@@ -1,4 +1,21 @@
 @media screen and (min-width: 1200px){
+    ///404.html///
+    .page__img_phone {
+        display: none;
+    }
+
+
+    ///contackt.html///
+    .wrapper__items-phone {
+        display: none;
+    }
+
+
+    ///galery.html///
+
+    .wrapper_gallery-phone {
+        display: none;
+    }
     ///article.html///
 
 
@@ -44,8 +61,47 @@
     }
 }
 
+@media screen and (max-width: 1200px) {
+    ///404.html///
+    .page__img img{
+        width: 74%;
+    }
 
-@media screen and (max-width: 1200px) { 
+    .page__img_phone {
+        display: none;
+    }
+    ///contackt.html///
+
+
+    .wrapper__items-phone {
+        display: none;
+    }
+    .wrapper__contackt .__item img {
+        width: 280px;
+    }
+
+    .wrapper__contackt .__item .__descr-contackt a img {
+        width: 20px;
+    }
+
+
+    
+    ///gallery_item.html///
+
+    .article__arrow {
+        margin-left: 25%;
+    }
+
+    ///gallery.html///
+
+
+    .wrapper_gallery-phone {
+        display: none;
+    }
+    .__item-gallery {
+        width: 449px;
+    }
+
     ///article.html///
     .__item-article {
         max-width: 299px;
@@ -247,8 +303,47 @@
 }
 }
 
-
 @media screen and (max-width: 998px) { 
+    ///404.html///
+
+
+    ///contackt.html///
+
+    .wrapper__items-phone {
+        display: none;
+    }
+
+    .wrapper__contackt {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .wrapper__contackt .__item:nth-child(2){
+        margin-left: 28px;
+    }
+
+    ///gallery.html///
+
+    .wrapper_gallery-phone {
+        display: none;
+    }
+
+    .article_promo .promo_product {
+        display: flex;
+        align-items: flex-start;
+    }
+
+    .__item-gallery {
+        width: 560px;
+        margin-right: 0px;
+    }
+
+    .wrapper_gallery {
+        flex-direction: column;
+        align-items: center;
+    }
+
+
     ///article.html///
 
     .wrapper_article {
@@ -675,10 +770,158 @@
         color: #E5E5E5;
         text-decoration: none;
     }
- }
-
+}
 
  @media screen and (max-width: 768px) { 
+    ///404.html///
+    .page__img_phone {
+        display: block;
+    }
+
+    .page__img {
+        display: none;
+    }
+
+    .page__img_phone h2{
+        font-style: normal;
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 130%;
+        text-align: center;
+        color: #E72020;
+        padding-top: 55px;
+    }
+
+    .page__img_phone h3{
+        font-style: normal;
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 130%;
+        text-align: center;
+        color: #E72020;
+        margin-top: 5px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .page__img_phone img{
+        display: block;
+        margin: 0 auto;
+        margin-top: 25px;
+    }
+
+    ///contackt.html///
+    
+    .wrapper__items-phone {
+        display: block;
+        margin-top: 20px;
+    }
+
+    .wrapper__items-phone .__item p {
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 140%;
+        color: #15385F;
+        margin-top: 20px;
+    }
+    
+    .__descr-contackt:nth-child(1):before {
+        position: absolute;
+        content: '';
+        width: 140px;
+        border: 2px solid #15385F;
+        top: -50px;
+    }
+
+    .wrapper__items {
+        position: relative;
+        padding: 30px 23px 13px 31px;
+    }
+
+    .wrapper__items:before {
+        position: absolute;
+        content: '';
+        width: 140px;
+        border: 2px solid #15385F;
+        top: -50px;
+        left: 35%;
+    }
+
+
+    
+    .__descr-contackt {
+        position: relative;
+    }
+    .__promo-title p {
+        font-size: 16px;
+        margin-top: 15px;
+    }
+
+    .__promo-title {
+        align-items: flex-start;
+        flex-direction: column;
+        max-width: 454px;
+    }
+
+    .__promo-title span{
+        display: none;
+    }
+
+    .wrapper__contackt .__item:nth-child(1) {
+        margin-bottom: 50px;
+    }
+
+    .wrapper__contackt .__item:nth-child(2) {
+        margin-left: 0px;
+        margin-bottom: 50px;
+    }
+
+    .wrapper__contackt .__item img {
+        width: 360px;
+    }
+
+
+    .main_product .wrapper__items .__item:nth-child(2) {
+        display: none;
+    }
+
+    .footer_descr_phone {
+        margin-left: 25%;
+    }
+
+    .main_product .promo_product {
+        display: flex;
+        align-items: flex-start;
+    }
+
+
+    ///gallery_item.html///
+
+    .article__arrow {
+        margin-left: 9%;
+    }
+
+    .article_promo .promo_product {
+        display: flex;
+        align-items: flex-start;
+    }
+
+
+    ///gallery.html///
+
+
+    .wrapper_gallery-phone {
+        display: none;
+    }
+    .__item-gallery {
+        width: 556px;
+        margin-right: 0px;
+    }
+
+
+
     ///article.html///
     .__item-article a {
         font-size: 14px;
@@ -1456,7 +1699,74 @@
     
 }
 
-@media screen and (max-width: 576px) {  
+@media screen and (max-width: 576px) {
+    ///404.html///
+
+
+    ///contackt.html///
+
+
+
+        ///gallery_item.html///
+
+
+        .slider__gallery .__descr p {
+            font-size: 18px;
+        }
+        
+        .article__arrow {
+            margin-left: 0%;
+        }
+
+        .article_promo .promo_product {
+            display: flex;
+            align-items: flex-start;
+        }
+    
+
+    ///gallery.html///
+
+    .__item-gallery:nth-child(2) {
+        background: none;
+    }
+
+    .wrapper_gallery {
+        display: none;
+    }
+
+    .wrapper_gallery-phone {
+        display: block;
+    }
+
+    .__item-gallery_phone img{
+        width: 100%;
+    }
+    
+    .__item-gallery p {
+        font-style: normal;
+        font-weight: 700;
+        font-size: 51px;
+        line-height: 130%;
+        color: #15385F;
+    }
+
+
+    .__item-gallery h2 {
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 130%;
+        color: #15385F;
+    }
+
+    .__item-gallery {
+        width: 405px;
+        padding-top: 25px;
+        height: 0;
+        margin-top: 25px;
+        padding-left: 0px;
+    }
+
     ///article.html///
     .article_promo .wrapper{
         display: flex;
@@ -1833,6 +2143,24 @@
 }
 
 @media screen and (max-width: 425px) { 
+    ///404.html///
+
+
+
+    ///contackt.html///
+    .wrapper__contackt .__item img {
+        width: 300px;
+    }
+
+
+    ///gallery.html///
+
+
+    .__item-gallery {
+        width: 100%;
+        padding-left: 0px;
+    }
+
     ///article.html///
     .__title h3 {
         font-size: 30px;
@@ -2122,6 +2450,15 @@
 }
 
 @media screen and (max-width: 375px) {  
+    ///404.html///
+
+
+
+    ///contackt.html///
+
+
+
+
     ///article.html///
 
 
